# stemmer

./: .gitignore  CMakeLists.txt  le_arquivo.cpp  rules.h  rules_normal.cpp  stemmer.c  stemmer.cpp  teste_cmp.cpp  teste_le_arq.cpp
paralelo/: CMakeLists.txt  kernel_stemmer.cu  myruntime.cu  paralelo  rules.cpp  rules.h  rules_inverso.cpp  saida.txt  stemmer_inverso_paralelo.cpp
paralelo_teste/: kernel_stemmer.cu  myruntime.h  paralelo  stemmer_paralelo.cpp
sequencial/: CMakeLists.txt  rules.cpp  rules.h  rules_inverso.cpp  sequencial  stemmer.cpp  stemmer_anterior.cpp  stemmer_inverso.cpp
sequencial_teste/: rules.cpp  rules.h  stemmer.cpp
